# course

bcc/: CMakeLists.txt
watcom/: CMakeLists.txt  check1.cpp  intstr.cpp
